# Test

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  minimart  minimart_api_collection.json  pyproject.toml  test_chat.html  test_notifications.html
alembic/: env.py
alembic/versions/: 1b12d7e1fb18_remove_global_email_unique_constraint.py  30868a228fc3_make_expires_at_timezone_aware_in_.py  30cf4da6f2f7_add_default_to_joined_at.py  4bd615e1ffb3_make_expires_at_timezone_aware_in_.py  6aeea402b2b5_add_cancelled_at_to_shopping_list_.py  8b155ab77dee_initial_migration.py  a1b2c3d4e5f6_add_cancelled_at_resent_at_to_invites.py  a63b2b71610e_make_tenant_id_nullable_for_global_.py  b1d3fa8454a1_add_default_to_joined_at.py  c8ff3458bced_add_blacklisted_tokens_table.py
app/: __init__.py  main.py
app/api/: __init__.py  router.py
app/common/: __init__.py  constants.py  enums.py
app/core/: __init__.py  config.py  dependencies.py  logging.py  responses.py  security.py  time.py
app/db/: database.py  session.py
app/exceptions/: __init__.py  auth.py  base.py  handlers.py  user.py  validation.py
app/models/: __init__.py  base.py  chat_message.py  invitation.py  item.py  notification.py  shopping_list.py  shopping_list_member.py  tenant.py  token_blacklist.py  user.py
app/schemas/: __init__.py  auth.py  chat.py  common.py  invitation.py  item.py  notification.py  shopping_list.py  tenant.py  user.py  (+1 more)
scripts/: check_chat.py  check_enum.py  create_superadmin.py  generate_postman.py  migrate_notification_enum.py  migrate_token_length.py  verify_user_changes.py
(+34 files in other folders)
